Update confi.md